# multitype-pool

./: .clang-format  .gitignore  CMakeLists.txt  README.md  example.cpp  main.cpp  multitype_main.cpp
autosize/: autosize.hpp  autosize_int.hpp
multitype/: allocator.hpp  bitmap_alloc.hpp  identity_alloc.hpp  new_alloc.hpp  segmented_storage.hpp  type_combiner.hpp  union_alloc.hpp
multitype/combine/: combine.hpp  greedy.hpp
multitype/root/: bitmap_alloc.hpp  single_alloc.hpp
pool/: multitype_pool.hpp  multitype_pool_notes  pool.hpp
pool/policy/: backoff_exponential.hpp  dynamic_storage.hpp  freelist_bitmap.hpp  freelist_data_store.hpp  freelist_stack.hpp  intrusive_linked_stack.hpp  static_storage.hpp
